k8s/base/api/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    role: api
  ports:
    - port: 3333
      targetPort: 3333
      name: api-service
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress
  labels:
    role: api
spec:
  routes:
    - kind: Rule
      match: Host('none.invalid')
      services:
        - name: api
          port: 3333
